# controllers/librarianControl.js
@@ -5,7 +5,7 @@ const ObjectId = require("mongodb").ObjectId;
 const getAll = async (req, res) => {
   try {
     const db = mongodb.getDb();
-    const lists = await db.collection("patron").find().toArray();
+    const lists = await db.collection("librarian").find().toArray();
     res.setHeader("Content-Type", "application/json");
     return res.status(200).json(lists);
   } catch (err) {
@@ -18,14 +18,14 @@ const getSingle = async (req, res) => {
     if (!ObjectId.isValid(req.params.id)) {
       return res
         .status(400)
-        .json("Must use a valid patron id to find a patron.");
+        .json("Must use a valid librarian id to find a librarian.");
     }
     const db = mongodb.getDb();
     const user = await db
-      .collection("patron")
+      .collection("librarian")
       .findOne({ _id: new ObjectId(req.params.id) });
     if (!user) {
-      return res.status(404).json("Patron not found.");
+      return res.status(404).json("Librarian not found.");
     }
     res.setHeader("Content-Type", "application/json");
     return res.status(200).json(user);
@@ -34,67 +34,77 @@ const getSingle = async (req, res) => {
   }
 };
 
-const createPatron = async (req, res) => {
+const createLibrarian = async (req, res) => {
   const user = {
     name: req.body.name,
-    checkedOut: req.body.checkedOut,
-    finesDue: req.body.finesDue,
+    salary: req.body.salary,
+    hours: req.body.hours,
   };
-  const result = await mongodb.getDb().collection("patron").insertOne(user);
+  const result = await mongodb.getDb().collection("librarian").insertOne(user);
   if (result.acknowledged) {
     res.status(204).send();
   } else {
     res
       .status(500)
-      .json(result.error || "Some error occurred while creating the patron.");
+      .json(
+        result.error || "Some error occurred while creating the librarian.",
+      );
   }
 };
 
-const updatePatron = async (req, res) => {
+const updateLibrarian = async (req, res) => {
   if (!ObjectId.isValid(req.params.id)) {
-    res.status(400).json("Must use a valid patron id to update a patron.");
+    res
+      .status(400)
+      .json("Must use a valid librarian id to update a librarian.");
   }
   const id = new ObjectId(req.params.id);
   const user = {
     name: req.body.name,
-    checkedOut: req.body.checkedOut,
-    finesDue: req.body.finesDue,
+    salary: req.body.salary,
+    hours: req.body.hours,
   };
   const result = await mongodb
     .getDb()
-    .collection("patron")
+    .collection("librarian")
     .updateOne({ _id: id }, { $set: user });
   if (result.modifiedCount > 0) {
     res.status(204).send();
   } else {
     res
       .status(500)
-      .json(result.error || "Some error occurred while updating the patron.");
+      .json(
+        result.error || "Some error occurred while updating the librarian.",
+      );
   }
 };
 
-const deletePatron = async (req, res) => {
+const deleteLibrarian = async (req, res) => {
   if (!ObjectId.isValid(req.params.id)) {
-    res.status(400).json("Must use a valid patron id to delete a patron.");
+    res
+      .status(400)
+      .json("Must use a valid librarian id to delete a librarian.");
   }
   const id = new ObjectId(req.params.id);
   const result = await mongodb
     .getDb()
-    .collection("patron")
+    .collection("librarian")
     .deleteOne({ _id: id });
   if (result.deletedCount > 0) {
     res.status(204).send();
   } else {
     res
       .status(500)
-      .json(result.error || "Some error occurred while deleting the patron.");
+      .json(
+        result.error || "Some error occurred while deleting the librarian.",
+      );
   }
 };
 
 module.exports = {
   getAll,
   getSingle,
-  createPatron,
-  updatePatron,
-  deletePatron,
+  createLibrarian,
+  updateLibrarian,
+  deleteLibrarian,
 };
